# scanline-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  input.c  input.h  main.c  palette.c  palette.h  video.c  video.h
